Related to issue #56
- Bind to POST /users/:username/posts
- Returns 201, 400 or 404
- Returns Location header
